# gitty

./: .gitignore  Cargo.toml  README.md  gitty_config.example.yml  precommit.sh
.github/workflows/: rust.yml
src/: consts.rs  git.rs  main.rs
src/app/: app.rs
src/arguments/: arguments.rs  common_trait.rs  confirm.rs  enquirer.rs  input.rs  mod.rs  multiselect.rs  secret.rs  select.rs
src/arguments/test/: mod.rs  test_enquirer.rs
src/gits/: behavior.rs  git_helper.rs  git_work.rs  gits.rs  mod.rs  run_command.rs  type.rs
src/loading_print/: loading_print.rs  mod.rs
src/logs/: loading.rs  logs.rs  mod.rs
src/setting/: mod.rs  read_setting.rs
src/sys_work/: mod.rs  sys_work.rs  test_sys_work.rs
