[package]
name = "gitty"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
git2 = "0.16.1"
enquirer = "0.6.1"
termion = "2.0.1"
dialoguer = "0.10.3"
url = "2.3.1"

