[package]
name = "gitty"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
git2 = "0.16.1"
termion = "2.0.1"
dialoguer = "0.10.3"
url = "2.3.1"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio ={ version = "1.24.2", features = ["full"]  }
futures = "0.3.25"
color-eyre = "0.6.2"
serde_yaml = "0.9.17"
indicatif = "0.17.3"

